--- a/index.html
+++ b/index.html
@@ -1,40 +1,11 @@
 <!doctype html>
-<html lang="pt">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!-- ✅ SEO Básico -->
-    <title>Barza – Reserva de Barbeiros e Profissionais de Beleza</title>
-    <meta
-      name="description"
-      content="A Barza é a plataforma onde podes encontrar, reservar e avaliar barbeiros e profissionais de beleza com rapidez e confiança."
-    />
-    <meta
-      name="keywords"
- content="Barza, beleza, barbearia, cabeleireiro, estética, manicure, pedicure, spa, maquiadores, skincare, tratamentos faciais, depilação, alongamento de unhas, salão de beleza, agendamento de serviços, profissionais de beleza, bem-estar, cuidados pessoais, Angola"
-    />
-    <meta name="author" content="Barza" />
-
-    <!-- 🌐 Open Graph (Partilha em Redes Sociais) -->
-    <meta property="og:type" content="website" />
-    <meta property="og:title" content="Barza – Plataforma de Beleza e Reservas" />
-    <meta
-      property="og:description"
-      content="Agenda o teu barbeiro ou profissional de beleza favorito com a Barza."
-    />
-    <meta property="og:image" content="/icon.png" />
-    <meta property="og:url" content="https://www.barrza.com" />
-
-    <!-- 🐦 Twitter Card (Opcional, mas recomendado) -->
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Barza – Plataforma de Reservas de Beleza" />
-    <meta
-      name="twitter:description"
-      content="Descobre e agenda serviços de beleza com facilidade através da Barza."
-    />
-    <meta name="twitter:image" content="/barza-share.png" />
+    <meta name="google-site-verification" content="OlzbPk90v2GOXBLub7Oe7JlkNkgXbffL43_fTEuiFM8" />
+    <title>Barza - Beauty Booking Platform</title>
   </head>
   <body>
     <div id="root"></div>
